Container fixes. Add unzip for stability recommendation. jq for kokoro and fix repo name
Change-Id: I520b284175b0754c8abcb90f73f96ff183c83efb

--- a/2/2.3/Dockerfile
+++ b/2/2.3/Dockerfile
@@ -42,6 +42,7 @@ RUN apt-get update \
     apt-utils \
     cron \
     gettext-base \
+    jq \
     libbz2-dev \
     libjpeg62-turbo-dev \
     libpng-dev \
@@ -68,6 +69,7 @@ RUN apt-get update \
     pwgen \
     sudo \
     supervisor \
+    unzip \
     zip \
   && rm -rf /var/lib/apt/lists/*
 
