--- a/templates/Dockerfile.template
+++ b/templates/Dockerfile.template
@@ -46,6 +46,7 @@ RUN apt-get update \
     apt-utils \
     cron \
     gettext-base \
+    jq \
     libbz2-dev \
     libjpeg62-turbo-dev \
     libpng-dev \
@@ -72,6 +73,7 @@ RUN apt-get update \
     pwgen \
     sudo \
     supervisor \
+    unzip \
     zip \
   && rm -rf /var/lib/apt/lists/*
 
