Move composer install to Dockerfile

--- a/templates/Dockerfile.template
+++ b/templates/Dockerfile.template
@@ -1,14 +1,15 @@
-# Copyright 2019 Google LLC
+{{- $magento := index .Packages "magento" -}}
+{{- $sodium := index .Packages "sodium" -}}
+{{- $composer := index .Packages "composer" -}}
+{{- $nginx := index .Packages "nginx" -}}
+
+# Copyright 2020 Google LLC
 #
 # This software is licensed under the Open Software License version
 # 3.0. The full text of this license can be found in https://opensource.org/licenses/OSL-3.0
 # or in the file LICENSE which is distributed along with the software.
 
 FROM {{ .From }}
-{{- $magento := index .Packages "magento" }}
-{{- $sodium := index .Packages "sodium" }}
-{{- $composer := index .Packages "composer" }}
-{{- $nginx := index .Packages "nginx" }}
 
 ENV DEBUG_DOCKER_ENTRYPOINT false
 
@@ -206,7 +207,8 @@ WORKDIR /magento
 RUN curl -L -o magento.tar.gz https://api.github.com/repos/magento/magento2/tarball/${MAGENTO_VERSION} \
    && test "$(sha1sum magento.tar.gz | awk {'print $1'})" = ${MAGENTO_SHA1} \
    && tar -xf magento.tar.gz -C /magento --strip-components=1 \
-   && rm -f magento.tar.gz
+   && rm -f magento.tar.gz \
+   && composer.phar install
 
 WORKDIR /app
 
