--- a/templates/Dockerfile.template
+++ b/templates/Dockerfile.template
@@ -69,7 +69,7 @@ RUN apt-get update \
     libyaml-dev \
     libzip-dev \
     mysql-client \
-    nginx=${NGINX_VERSION}-1+deb9u3 \
+    nginx=${NGINX_VERSION}* \
     procps \
     pwgen \
     sudo \
