Added git package

--- a/templates/Dockerfile.template
+++ b/templates/Dockerfile.template
@@ -47,6 +47,7 @@ RUN apt-get update \
     apt-utils \
     cron \
     gettext-base \
+    git \
     jq \
     libbz2-dev \
     libjpeg62-turbo-dev \
