--- a/2/debian9/2.3/Dockerfile
+++ b/2/debian9/2.3/Dockerfile
@@ -42,6 +42,7 @@ RUN apt-get update \
     apt-utils \
     cron \
     gettext-base \
+    git \
     jq \
     libbz2-dev \
     libjpeg62-turbo-dev \
