Docker - Magento - update to sha256sum

--- a/templates/Dockerfile.template
+++ b/templates/Dockerfile.template
@@ -3,7 +3,7 @@
 {{- $composer := index .Packages "composer" -}}
 {{- $nginx := index .Packages "nginx" -}}
 
-# Copyright 2020 Google LLC
+# Copyright 2022 Google LLC
 #
 # This software is licensed under the Open Software License version
 # 3.0. The full text of this license can be found in https://opensource.org/licenses/OSL-3.0
@@ -18,7 +18,7 @@ ENV MAGENTO_HOSTNAME localhost
 ENV MAGENTO_RUN_MODE production
 ENV ENABLE_CRONJOBS true
 
-ENV MAGENTO_SHA1 {{ $magento.Sha1 }}
+ENV MAGENTO_SHA256 {{ $magento.Sha256 }}
 ENV MAGENTO_VERSION {{ $magento.Version }}
 ENV C2D_RELEASE {{ $magento.Version }}
 
@@ -29,7 +29,7 @@ ENV MAGENTO_MYSQL_PORT 3306
 ENV MAGENTO_REDIS_HOST localhost
 ENV MAGENTO_REDIS_PORT 6379
 
-ENV SODIUM_SHA1 {{ $sodium.Sha1 }}
+ENV SODIUM_SHA256 {{ $sodium.Sha256 }}
 ENV SODIUM_VERSION {{ $sodium.Version }}
 
 ENV COMPOSER_SHA256 {{ $composer.Gpg }}
@@ -206,7 +206,7 @@ WORKDIR /magento
 
 # Download and install Magento libraries via Composer
 RUN curl -L -o magento.tar.gz https://api.github.com/repos/magento/magento2/tarball/${MAGENTO_VERSION} \
-   && test "$(sha1sum magento.tar.gz | awk {'print $1'})" = ${MAGENTO_SHA1} \
+   && test "$(Sha256sum magento.tar.gz | awk {'print $1'})" = ${MAGENTO_SHA256} \
    && tar -xf magento.tar.gz -C /magento --strip-components=1 \
    && rm -f magento.tar.gz \
    && composer.phar install
