[magento] Docker images updates - 2022-03-14

--- a/2/debian9/2.4/Dockerfile
+++ b/2/debian9/2.4/Dockerfile
@@ -13,7 +13,7 @@ ENV MAGENTO_HOSTNAME localhost
 ENV MAGENTO_RUN_MODE production
 ENV ENABLE_CRONJOBS true
 
-ENV MAGENTO_SHA256 23314c7495507db06d0d599369b3cc06e41b2ed9f3ba3736758bc33370801a5e
+ENV MAGENTO_SHA256 
 ENV MAGENTO_VERSION 2.4.3
 ENV C2D_RELEASE 2.4.3
 
@@ -24,7 +24,7 @@ ENV MAGENTO_MYSQL_PORT 3306
 ENV MAGENTO_REDIS_HOST localhost
 ENV MAGENTO_REDIS_PORT 6379
 
-ENV SODIUM_SHA256 b7292dd1da67a049c8e78415cd498ec138d194cfdb302e716b08d26b80fecc10
+ENV SODIUM_SHA256 
 ENV SODIUM_VERSION 1.0.18
 
 ENV COMPOSER_SHA256 1f210b9037fcf82670d75892dfc44400f13fe9ada7af9e787f93e50e3b764111
