--- a/templates/Dockerfile.template
+++ b/templates/Dockerfile.template
@@ -69,7 +69,7 @@ RUN apt-get update \
     libxslt1-dev \
     libyaml-dev \
     libzip-dev \
-    mysql-client \
+    mariadb-client \
     nginx=${NGINX_VERSION}* \
     procps \
     pwgen \
@@ -79,10 +79,9 @@ RUN apt-get update \
     zip \
   && rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+RUN docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ \
     && docker-php-ext-configure imap --with-kerberos --with-imap-ssl \
-    && docker-php-ext-configure opcache --enable-opcache \
-    && docker-php-ext-configure zip --with-libzip
+    && docker-php-ext-configure opcache --enable-opcache
 
 RUN docker-php-ext-install -j$(nproc) \
   bcmath \
@@ -99,7 +98,6 @@ RUN docker-php-ext-install -j$(nproc) \
   opcache \
   pdo_mysql \
   pspell \
-  recode \
   shmop \
   soap \
   sockets \
@@ -161,7 +159,6 @@ RUN docker-php-ext-enable \
   propro \
   pspell \
   raphf \
-  recode \
   redis \
   shmop \
   soap \
