Install python (required by setup_functions.sh)

--- a/2/debian11/2.4/Dockerfile
+++ b/2/debian11/2.4/Dockerfile
@@ -49,6 +49,7 @@ RUN apt-get update \
     libpng-dev \
     libfreetype6-dev \
     libgeoip-dev \
+    python \
     wget \
     libgmp-dev \
     libmagickwand-dev \
