--- a/templates/Dockerfile.template
+++ b/templates/Dockerfile.template
@@ -54,6 +54,7 @@ RUN apt-get update \
     libpng-dev \
     libfreetype6-dev \
     libgeoip-dev \
+    python \
     wget \
     libgmp-dev \
     libmagickwand-dev \
