--- a/2/debian11/2.4.3/Dockerfile
+++ b/2/debian11/2.4.3/Dockerfile
@@ -4,7 +4,7 @@
 # 3.0. The full text of this license can be found in https://opensource.org/licenses/OSL-3.0
 # or in the file LICENSE which is distributed along with the software.
 
-FROM gcr.io/cloud-marketplace-ops/php7-fpm:7.3-debian9
+FROM marketplace.gcr.io/google/php7-fpm:7.4
 
 ENV DEBUG_DOCKER_ENTRYPOINT false
 
@@ -30,7 +30,7 @@ ENV SODIUM_VERSION 1.0.18
 ENV COMPOSER_SHA256 1f210b9037fcf82670d75892dfc44400f13fe9ada7af9e787f93e50e3b764111
 ENV COMPOSER_VERSION 1.9.1
 
-ENV NGINX_VERSION 1.10.3
+ENV NGINX_VERSION 1.18.0
 
 ENV PHP_MEMORY_LIMIT 2G
 ENV PHP_UPLOAD_SIZE 64M
@@ -49,6 +49,7 @@ RUN apt-get update \
     libpng-dev \
     libfreetype6-dev \
     libgeoip-dev \
+    python \
     wget \
     libgmp-dev \
     libmagickwand-dev \
@@ -64,7 +65,7 @@ RUN apt-get update \
     libxslt1-dev \
     libyaml-dev \
     libzip-dev \
-    mysql-client \
+    mariadb-client \
     nginx=${NGINX_VERSION}* \
     procps \
     pwgen \
@@ -74,10 +75,9 @@ RUN apt-get update \
     zip \
   && rm -rf /var/lib/apt/lists/*
 
-RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+RUN docker-php-ext-configure gd --with-freetype=/usr/include/ --with-jpeg=/usr/include/ \
     && docker-php-ext-configure imap --with-kerberos --with-imap-ssl \
-    && docker-php-ext-configure opcache --enable-opcache \
-    && docker-php-ext-configure zip --with-libzip
+    && docker-php-ext-configure opcache --enable-opcache
 
 RUN docker-php-ext-install -j$(nproc) \
   bcmath \
@@ -94,7 +94,6 @@ RUN docker-php-ext-install -j$(nproc) \
   opcache \
   pdo_mysql \
   pspell \
-  recode \
   shmop \
   soap \
   sockets \
@@ -111,10 +110,10 @@ RUN pecl install -o -f \
   geoip-1.1.1 \
   igbinary \
   imagick \
+  propro \
   mailparse \
   msgpack \
   oauth \
-  propro \
   raphf \
   redis \
   yaml
@@ -142,8 +141,6 @@ RUN docker-php-ext-enable \
   gd \
   gettext \
   gmp \
-  igbinary \
-  imagick \
   imap \
   intl \
   ldap \
@@ -153,10 +150,8 @@ RUN docker-php-ext-enable \
   oauth \
   opcache \
   pdo_mysql \
-  propro \
   pspell \
   raphf \
-  recode \
   redis \
   shmop \
   soap \
@@ -167,6 +162,9 @@ RUN docker-php-ext-enable \
   sysvshm \
   tidy \
   xmlrpc \
+  igbinary \
+  imagick \
+  propro \
   xsl \
   yaml \
   zip \
